--- a/bumpbuddy/package.json
+++ b/bumpbuddy/package.json
@@ -6,7 +6,12 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "bun eslint .",
+    "lint:fix": "bun eslint . --fix",
+    "type-check": "bun tsc --noEmit",
+    "test": "bun test",
+    "clean": "rm -rf node_modules && bun install"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
@@ -19,12 +24,26 @@
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-dotenv": "^3.4.11",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "@typescript-eslint/eslint-plugin": "^8.32.0",
+    "@typescript-eslint/parser": "^8.32.0",
+    "eslint": "^9.26.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-native": "^5.0.0",
     "typescript": "~5.8.3"
   },
-  "private": true
+  "private": true,
+  "trustedDependencies": [
+    "react-native"
+  ],
+  "engines": {
+    "node": ">=16.0.0",
+    "bun": ">=1.0.0"
+  }
 }
