--- a/bumpbuddy/package.json
+++ b/bumpbuddy/package.json
@@ -14,12 +14,16 @@
     "clean": "rm -rf node_modules && bun install"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/datetimepicker": "^8.3.0",
     "@react-navigation/bottom-tabs": "^7.3.12",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/stack": "^7.3.1",
     "@reduxjs/toolkit": "^2.7.0",
+    "@supabase/realtime-js": "2.10.0",
     "@supabase/supabase-js": "^2.49.4",
+    "@types/node": "^22.15.14",
     "expo": "~53.0.7",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
