--- a/bumpbuddy/package.json
+++ b/bumpbuddy/package.json
@@ -24,11 +24,17 @@
     "@supabase/realtime-js": "2.10.0",
     "@supabase/supabase-js": "^2.49.4",
     "@types/node": "^22.15.14",
+    "date-fns": "^4.1.0",
     "expo": "~53.0.7",
+    "expo-localization": "^16.1.5",
     "expo-status-bar": "~2.2.3",
+    "i18next": "^25.1.2",
+    "i18next-react-native-language-detector": "^1.0.2",
     "react": "19.0.0",
+    "react-i18next": "^15.5.1",
     "react-native": "0.79.2",
     "react-native-dotenv": "^3.4.11",
+    "react-native-localize": "^3.4.1",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
