--- a/bumpbuddy/package.json
+++ b/bumpbuddy/package.json
@@ -25,7 +25,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "@types/node": "^22.15.14",
     "date-fns": "^4.1.0",
-    "expo": "~53.0.7",
+    "expo": "53.0.9",
     "expo-localization": "^16.1.5",
     "expo-status-bar": "~2.2.3",
     "i18next": "^25.1.2",
