--- a/bumpbuddy/package.json
+++ b/bumpbuddy/package.json
@@ -14,6 +14,8 @@
     "clean": "rm -rf node_modules && bun install"
   },
   "dependencies": {
+    "@expo-google-fonts/comfortaa": "^0.3.0",
+    "@expo-google-fonts/poppins": "^0.3.1",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/datetimepicker": "^8.3.0",
@@ -26,16 +28,22 @@
     "@types/node": "^22.15.14",
     "date-fns": "^4.1.0",
     "expo": "53.0.9",
+    "expo-font": "~13.3.1",
     "expo-localization": "^16.1.5",
+    "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "i18next": "^25.1.2",
     "i18next-react-native-language-detector": "^1.0.2",
+    "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-i18next": "^15.5.1",
     "react-native": "0.79.2",
     "react-native-dotenv": "^3.4.11",
     "react-native-localize": "^3.4.1",
-    "react-redux": "^9.2.0"
+    "react-native-reanimated": "3.16.2",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-redux": "^9.2.0",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
