--- a/bumpbuddy/package.json
+++ b/bumpbuddy/package.json
@@ -39,6 +39,7 @@
     "react-i18next": "^15.5.1",
     "react-native": "0.79.2",
     "react-native-dotenv": "^3.4.11",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-localize": "^3.4.1",
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "^5.4.0",
