--- a/bumpbuddy/package.json
+++ b/bumpbuddy/package.json
@@ -19,6 +19,7 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.3.12",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/stack": "^7.3.1",
@@ -44,11 +45,14 @@
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "^5.4.0",
     "react-redux": "^9.2.0",
-    "tailwindcss": "^3.4.17"
+    "redux-persist": "^6.0.0",
+    "tailwindcss": "^3.4.17",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.32.0",
     "@typescript-eslint/parser": "^8.32.0",
     "eslint": "^9.26.0",
