--- a/bumpbuddy/package.json
+++ b/bumpbuddy/package.json
@@ -30,9 +30,11 @@
     "date-fns": "^4.1.0",
     "expo": "53.0.9",
     "expo-font": "~13.3.1",
+    "expo-linking": "^7.1.5",
     "expo-localization": "^16.1.5",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
+    "expo-web-browser": "^14.1.6",
     "i18next": "^25.1.2",
     "i18next-react-native-language-detector": "^1.0.2",
     "nativewind": "^4.1.23",
