--- a/bumpbuddy/package.json
+++ b/bumpbuddy/package.json
@@ -42,7 +42,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-localize": "^3.4.1",
-    "react-native-reanimated": "3.16.2",
+    "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
