--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,6 +62,19 @@ jobs:
             git pull origin main
 
             cd bumpbuddy
+
+            # Check if Bun is installed, install if not
+            echo "Checking Bun installation..."
+            if ! command -v bun &> /dev/null; then
+              echo "Bun not found. Installing Bun..."
+              curl -fsSL https://bun.sh/install | bash
+              # Add Bun to PATH for current session
+              export PATH="$HOME/.bun/bin:$PATH"
+              echo "Bun installed successfully"
+            else
+              echo "Bun is already installed: $(bun --version)"
+            fi
+
             echo "Installing dependencies..."
             bun install
 
