Update deployment workflow to enable linting step
- Re-enabled the linting step in the GitHub Actions deployment workflow to ensure code quality checks are performed before deployment.
- Adjusted the linting command to navigate to the correct directory for execution.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,10 +23,10 @@ jobs:
           bun install
 
       # Skip linting for now
-      # - name: Lint code
-      #   run: |
-      #     cd bumpbuddy
-      #     bun run lint
+      - name: Lint code
+        run: |
+          cd bumpbuddy
+          bun run lint
 
       - name: Deploy to VPS
         uses: appleboy/ssh-action@v1.2.2
